delete jvm option: AggressiveOpts