@@ -14,6 +14,6 @@ set "CURR_DIR=%cd%"
 cd ..
 set "SHARDINGCAT_HOME=%cd%"
 cd %CURR_DIR%
-"%JAVA_CMD%" -server -Xms1G -Xmx1G -XX:MaxPermSize=64M  -XX:+AggressiveOpts -DSHARDINGCAT_HOME=%SHARDINGCAT_HOME% -cp "..\conf;..\lib\*" io.shardingcat.util.dataMigrator.DataMigrator -tempFileDir=  -isAwaysUseMaster=true -mysqlBin=  -cmdLength=3*1024 -charset=utf8 -deleteTempFileDir=true -threadCount= -delThreadCount= -queryPageSize=10000
+"%JAVA_CMD%" -server -Xms1G -Xmx1G -XX:MaxPermSize=64M -DSHARDINGCAT_HOME=%SHARDINGCAT_HOME% -cp "..\conf;..\lib\*" io.shardingcat.util.dataMigrator.DataMigrator -tempFileDir=  -isAwaysUseMaster=true -mysqlBin=  -cmdLength=3*1024 -charset=utf8 -deleteTempFileDir=true -threadCount= -delThreadCount= -queryPageSize=10000
 
 pause
