@@ -16,11 +16,10 @@ if $noJavaHome ; then
 fi
 #==============================================================================
 #set JAVA_OPTS
-JAVA_OPTS="-server -Xms2G -Xmx2G -XX:MaxPermSize=64M  -XX:+AggressiveOpts -XX:MaxDirectMemorySize=2G"
-#JAVA_OPTS="-server -Xms4G -Xmx4G -XX:MaxPermSize=64M  -XX:+AggressiveOpts -XX:MaxDirectMemorySize=6G"
+JAVA_OPTS="-server -Xms2G -Xmx2G -XX:MaxPermSize=64M -XX:MaxDirectMemorySize=2G"
+#JAVA_OPTS="-server -Xms4G -Xmx4G -XX:MaxPermSize=64M -XX:MaxDirectMemorySize=6G"
 #performance Options
 #JAVA_OPTS="$JAVA_OPTS -Xss256k"
-#JAVA_OPTS="$JAVA_OPTS -XX:+AggressiveOpts"
 #JAVA_OPTS="$JAVA_OPTS -XX:+UseBiasedLocking"
 #JAVA_OPTS="$JAVA_OPTS -XX:+UseFastAccessorMethods"
 #JAVA_OPTS="$JAVA_OPTS -XX:+DisableExplicitGC"
